
* bam(...,discrete=TRUE) can now use the smooth 'id' mecahnism to link 
  smoothing parameters, but note the method constraint that the linked bases 
  are not forced to be identical in this case (unlike other fitting methods).

* summary.gam now allows random effects tests to be skipped (in some large
  models the test is costly and uninteresting).

* coxph fix of prediction bug introduced with stratified model (thanks
  Giampiero Marra)
	
* bam(...,discrete=TRUE) fix to handle nested matrix arguments to smooths.

* bam(...,discrete=TRUE) fix to by variable handling with fs and re smooths
  which could fail during re-representation as tensor smooths (for 
  discretization purposes).

* bam was reporting wrong family under some smoothing parameter selection 
  methods (not default).

* null deviance computation improved for extended families. Previous version 
  used an approximation valid for most families, and corrected the rest - now 
  replaced with exact computations for all cases.

* paraPen handling in bam was broken - fixed.

* slight adjustment to sp  initialization for extended families - use observed 
  information in weights if possible.

1.8-22

* Fix of bug whereby testing for OpenMP and nthreads>1 in bam, would fail if 
  OpenMP was missing. 

1.8-21

* When functions were added to families within mgcv some very large 
  environments could end up attached to those functions, for no good reason.
  The problem originated from the dispatch of the generic 'fix.family.link' 
  and then propagated via fix.family.var and fix.family.ls. This is now avoided,
  resulting in smaller gam objects on disk and lower R memory usage. 
  Thanks to Niels Richard Hansen for uncovering this. 

* Another bug fix for prediction from discrete fit bam models with an offset, 
  this time when there were more than 50000 data. Also fix to bam fitting when 
  the number of data was an integer multiple of the chunk size + 1. 
